Bug 161541 - Printing: selecting different page orientation does not relayout printed handouts
Summary: Printing: selecting different page orientation does not relayout printed hand...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium minor
Assignee: Tibor Nagy
URL:
Whiteboard: target:25.8.0 target:25.2.0.2
Keywords:
Depends on:
Blocks: Print-Dialog
  Show dependency treegraph
 
Reported: 2024-06-12 23:12 UTC by Gabor Kelemen (Collabora)
Modified: 2026-02-19 10:12 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from the Candy template (1.59 MB, application/vnd.oasis.opendocument.presentation)
2024-06-12 23:12 UTC, Gabor Kelemen (Collabora)
Details
4 slides in Handouts type looks bad on a Portrait sheet (49.48 KB, image/png)
2024-06-12 23:16 UTC, Gabor Kelemen (Collabora)
Details
Changing the Orientation to Landscape does not relayout the content (47.48 KB, image/png)
2024-06-12 23:18 UTC, Gabor Kelemen (Collabora)
Details
Handout master shows where the Portrait setting comes from (26.62 KB, image/png)
2024-06-12 23:19 UTC, Gabor Kelemen (Collabora)
Details
Changing to the Handout master orientation shows less wasted space (43.78 KB, image/png)
2024-06-12 23:19 UTC, Gabor Kelemen (Collabora)
Details
After changing the Handout Master, the preview is laid out nicely (130.69 KB, image/png)
2024-06-12 23:20 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2024-06-12 23:12:29 UTC
Created attachment 194691 [details]
Example file from the Candy template

This is somewhat similar to bug 155218 of Calc

Usually, slide templates (at least TDF provided ones) are landscape oriented.
The handout master however is Portrait oriented, which makes it easy to trigger the issue.

1. Open attached file, which is just the Candy template
2. Go to the Print dialog
3. On the Impress tab, select the Handouts type and 4 "Slides per page"
-> the preview shows the Portrait oriented page with 4 small images of the slides. This is wasteful, they would look better (larger) if the paper would be landscape oriented
4. Go to the General page, select Landscape Orientation
-> the preview shows the landscape paper, but the slide images are still tiny with lots of empty space between them
5. Close the Print dialog, go to View - Master Handout
6. In the sidebar under the Master Slide section change the Orientation to Landscape. This is more visible with 4 or 9 slides per sheet, less so with the default 6, so play with changing the layout as well.
7. Go back to the Print Dialog, redo Step 3
-> Now the paper preview is landscape and the slide previews are larger, there is only a small empty space between them.

This is because the Print dialog does not relayout the document when the user overrides the Orientation setting, similarly to the case in bug 155218.

The issue can be also triggered with printing the Slides themselves, if the Pages per sheet setting is set to 4 and then the Orientation to Portrait. But this is more rare, since the default master slide orientation is sensibly "Landscape".

Version: 24.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: a2b6ce5d21b7f5c84ced8485f5af279f1bf8135f
CPU threads: 14; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: default

Also happens in 3.3.

I think it would be useful to implement some similar logic as in Calc for relayouting the content when the Orientation is changed.
Comment 1 Gabor Kelemen (Collabora) 2024-06-12 23:16:44 UTC
Created attachment 194692 [details]
4 slides in Handouts type looks bad on a Portrait sheet
Comment 2 Gabor Kelemen (Collabora) 2024-06-12 23:18:04 UTC
Created attachment 194693 [details]
Changing the Orientation to Landscape does not relayout the content
Comment 3 Gabor Kelemen (Collabora) 2024-06-12 23:19:01 UTC
Created attachment 194694 [details]
Handout master shows where the Portrait setting comes from
Comment 4 Gabor Kelemen (Collabora) 2024-06-12 23:19:45 UTC
Created attachment 194695 [details]
Changing to the Handout master orientation shows less wasted space
Comment 5 Gabor Kelemen (Collabora) 2024-06-12 23:20:37 UTC
Created attachment 194696 [details]
After changing the Handout Master, the preview is laid out nicely
Comment 6 Buovjaga 2024-08-21 05:08:48 UTC
Repro. Severity minor as there's a workaround.

Arch Linux 64-bit
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 85e4dc15d09dc3193870041b2814263971a27791
CPU threads: 8; OS: Linux 6.10; UI render: default; VCL: kf6 (cairo+wayland)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Built on 21 August 2024
Comment 7 Commit Notification 2024-12-11 13:20:45 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/cc65bec38ca26265ce8ecfd02110c26bcc62b79b

tdf#161541 sd: fix the orientation of handouts on the printed page

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Gabor Kelemen (Collabora) 2024-12-17 19:09:17 UTC
Verified in

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 7b9077669541b5685f3758b7a640b7e0d10dbe1b
CPU threads: 14; OS: Windows 10 X86_64 (build 19045); UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded

Selecting Handout printing and 4 slides, then changing to Landscape orientation relayouts the slides to fill the paper
Comment 9 Commit Notification 2024-12-24 10:54:04 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/20c86ca5c245aba8317388a04ed4f5e6979e3c80

tdf#161541 sd: fix the orientation of handouts on the printed page

It will be available in 25.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.