tdf#161541 sd: fix the orientation of handouts on the printed page

Change-Id: I1896674ab317fcbcfe2ebbe9ea21dcc36c203328
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/178274
Reviewed-by: Nagy Tibor <tibor.nagy.extern@allotropia.de>
Tested-by: Jenkins
(cherry picked from commit cc65bec38ca26265ce8ecfd02110c26bcc62b79b)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/178554
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>