vcl/source/window/printdlg.cxx
@@ -661,8 +661,6 @@ PrintDialog::PrintDialog(weld::Window* i_pWindow, std::shared_ptr<PrinterControl
 
     initFromMultiPageSetup( maPController->getMultipage() );
 
-    updatePageSize(mxOrientationBox->get_active());
-
     // setup optional UI options set by application
     setupOptionalUI();
 
@@ -1191,22 +1189,9 @@ void PrintDialog::updateNup( bool i_bMayUseCache )
         aMPS.aPaperSize = maNupPortraitSize;
     else // automatic mode
     {
-        updatePageSize(mxOrientationBox->get_active());
-        Size aPrintPageSize = maPController->getPrinter()->GetPrintPageSize();
-
         // get size of first real page to see if it is portrait or landscape
         // we assume same page sizes for all the pages for this
         Size aPageSize = getJobPageSize();
-
-        if ((aPageSize.Width() < aPageSize.Height()
-             && aPrintPageSize.Width() > aPrintPageSize.Height())
-            || (aPageSize.Width() > aPageSize.Height()
-                && aPrintPageSize.Width() < aPrintPageSize.Height()))
-        {
-            tools::Long nTmp = aPageSize.Width();
-            aPageSize.setWidth(aPageSize.Height());
-            aPageSize.setHeight(nTmp);
-        }
 
         Size aMultiSize( aPageSize.Width() * nCols, aPageSize.Height() * nRows );
         if( aMultiSize.Width() > aMultiSize.Height() ) // fits better on landscape
@@ -1920,6 +1905,7 @@ IMPL_LINK(PrintDialog, ToggleHdl, weld::Toggleable&, rButton, void)
         {
             mxOrientationBox->set_sensitive( true );
             mxOrientationBox->set_active( ORIENTATION_AUTOMATIC );
+            updatePageSize(mxOrientationBox->get_active());
             enableNupControls( true );
             updateNupFromPages();
         }
@@ -2001,6 +1987,7 @@ IMPL_LINK( PrintDialog, SelectHdl, weld::ComboBox&, rBox, void )
             maPController->resetPrinterOptions( false  );
 
             updateOrientationBox();
+            updatePageSize(mxOrientationBox->get_active());
 
             // update text fields
             mxOKButton->set_label(maPrintText);
@@ -2017,10 +2004,10 @@ IMPL_LINK( PrintDialog, SelectHdl, weld::ComboBox&, rBox, void )
 
             setPaperSizes();
             updateOrientationBox();
+            updatePageSize(mxOrientationBox->get_active());
             maUpdatePreviewIdle.Start();
         }
 
-        updatePageSize(mxOrientationBox->get_active());
         setupPaperSidesBox();
     }
     else if ( &rBox == mxPaperSidesBox.get() )
@@ -2063,10 +2050,6 @@ IMPL_LINK( PrintDialog, SelectHdl, weld::ComboBox&, rBox, void )
         maPController->setPaperSizeFromUser( Size( aInfo.getWidth(), aInfo.getHeight() ) );
 
         updatePageSize(mxOrientationBox->get_active());
-
-        int nOrientation = mxOrientationBox->get_active();
-        if (nOrientation != ORIENTATION_AUTOMATIC)
-            setPaperOrientation(static_cast<Orientation>(nOrientation - 1), true);
 
         maUpdatePreviewNoCacheIdle.Start();
     }
@@ -2198,6 +2181,8 @@ IMPL_LINK( PrintDialog, UIOption_SelectHdl, weld::ComboBox&, i_rBox, void )
     }
 
     checkOptionalControlDependencies();
+
+    updatePageSize(mxOrientationBox->get_active());
 
     // update preview and page settings
     maUpdatePreviewNoCacheIdle.Start();
